<resources>
    <string name="app_name">Time tracker</string>
    <string name="action_share">Share</string>
    <string name="no_tasks">No tasks</string>
    <string name="task_name">Task name</string>
    <string name="description">Description</string>
    <string name="start_timer">Start timer</string>
    <string name="finish_task">Finish task</string>
    <string name="task">Task</string>
    <string name="tasks">Tasks</string>
    <string name="time">Time</string>
    <string name="cant_create_file">Can not create file</string>
    <string name="send_email">Send email</string>
</resources>
