<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.andrew.timetracker.ui.TasksActivity"
    tools:showIn="@layout/activity_main">

    <FrameLayout
        android:id="@+id/fl_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_no_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tasks"
        android:textSize="@dimen/text_size_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_tasks_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16"
                android:layout_weight="0.3"
                android:textSize="@dimen/text_size_16"
                android:text="@string/task"/>

            <View
                android:layout_width="@dimen/size_1"
                android:layout_height="match_parent"
                android:background="@color/colorDivider"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16"
                android:layout_weight="0.4"
                android:textSize="@dimen/text_size_16"
                android:text="@string/description"/>

            <View
                android:layout_width="@dimen/size_1"
                android:layout_height="match_parent"
                android:background="@color/colorDivider"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_16"
                android:layout_weight="0.3"
                android:textSize="@dimen/text_size_16"
                android:text="@string/time"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1"
            android:background="@color/colorDivider"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
