<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_16"
    android:layout_marginBottom="@dimen/size_16"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_task_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="@dimen/size_256">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_24"
            android:layout_marginEnd="@dimen/size_24"
            android:layout_marginTop="@dimen/size_24"
            android:layout_marginBottom="@dimen/size_16">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_24"
            android:layout_marginEnd="@dimen/size_24">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:layout_marginTop="@dimen/size_32"
        android:layout_marginBottom="@dimen/size_32"
        android:textSize="@dimen/text_size_32"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_start_or_finish_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"
        android:padding="@dimen/size_16"
        android:layout_margin="@dimen/size_24"
        android:background="@color/colorWhite"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>